k8s/content-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
    spec:
      containers:
        - name: content
          image: content-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
