k8s/subscription-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription
  template:
    metadata:
      labels:
        app: subscription
    spec:
      containers:
      - name: subscription
        image: subscription-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
