k8s/subscription-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
spec:
  selector:
    app: subscription
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
