k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gostream-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - webstream258.online
      secretName: webstream258-tls
  rules:
    - host: webstream258.online
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
          - path: /api/content
            pathType: Prefix
            backend:
              service:
                name: content-service
                port:
                  number: 5003
          - path: /api/subscription
            pathType: Prefix
            backend:
              service:
                name: subscription-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
